# DearKid

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/paneitemgui/: CMakeLists.txt  PaneItem.cpp  PaneItem.h
src/sharedfolders/: CMakeLists.txt  SharedFolderOpt.cpp  SharedFolderOpt.h
tests/: CMakeLists.txt  TddGuiTest.cpp  TestSharedFolders.cpp
